k3s/apps/mattermost/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mattermost
spec:
  type: ClusterIP
  selector:
    component: mattermost
  ports:
    - name: http
      port: 8065
      targetPort: http
